err/steamcli.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.5.1.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/steamCLI'...
Compiling './lib/python3.5/site-packages/steamCLI/colors.py'...
***   File "./lib/python3.5/site-packages/steamCLI/colors.py", line 6
    print(f"{FAIL}\nERROR!\n\n{message}{END}")
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/steamCLI/results.py'...
***   File "./lib/python3.5/site-packages/steamCLI/results.py", line 31
    currency = f' {self.app.currency}' if self.app.currency else ''
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/steamCLI/steamapp.py'...
***   File "./lib/python3.5/site-packages/steamCLI/steamapp.py", line 150
    resource = f'{base_url}{appid}&cc={region}'
                                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/steamCLI-1.0.5.egg-info'...
Listing './lib/python3.5/site-packages/test'...
Compiling './lib/python3.5/site-packages/test/test_results.py'...
***   File "./lib/python3.5/site-packages/test/test_results.py", line 20
    expected = [f'*** {self.app.title} ({self.app.release_date}) ***',
                                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/test/test_steamapp.py'...
***   File "./lib/python3.5/site-packages/test/test_steamapp.py", line 462
    html = f'''<html>
                     <{element} class="{class_}">
                       {expected_text}
                     </{element}>
                     <{element} class="test2">
                       not this
                     </{element}>
                   </html>'''
                     
                                                 
                                      
                                 
                                              
                               
                                 
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
